# faststream-gen

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  404.html  CHANGELOG.md  CNAME  MANIFEST.in  README.md  index.html  objects.inv  pytest.ini  run_jupyter.sh  set_variables.sh  settings.ini  setup.py  sitemap.xml
.github/workflows/: deploy.yaml  test-faststream-examples.yaml  test.yaml
App_And_Test_Generator/: index.html
App_Description_Validator/: index.html
App_Skeleton_Generator/: index.html
Benchmark_CLI/: index.html
CHANGELOG/: index.html
CLI/: index.html
Chat/: index.html
Constants/: index.html
Embeddings_CLI/: index.html
Helper/: index.html
Integration_Test_Generator/: index.html
Logger/: index.html
New_Project_Generator/: index.html
PackageData/: index.html
Prompts/: index.html
SUMMARY/: index.html
Tutorial/Cryptocurrency_Tutorial/: index.html
autogen_poc/: description_agents.ipynb  web_agent.ipynb
docker/: dev.yml
docs_src/tutorial/calculate-mean-app/: description.txt  pyproject.toml
docs_src/tutorial/calculate-mean-app/app/: application.py
docs_src/tutorial/calculate-mean-app/tests/: test_application.py
docs_src/tutorial/retrieve-publish-crypto/: description.txt  pyproject.toml
docs_src/tutorial/retrieve-publish-crypto/app/: application.py
docs_src/tutorial/retrieve-publish-crypto/tests/: test_application.py
fastkafka_gen/: _cli.py  _cli_code_generator.py  _modidx.py  cli.py
faststream_gen/: __init__.py  _modidx.py  cli.py
fixture/: app_description_2.txt
fixtures/: consume_and_publish_to_multiple_topics.txt  consume_and_publish_to_multiple_topics_with_auth.txt  consume_and_publish_to_single_topic.txt  consume_and_publish_to_single_topic_with_auth.txt  consume_and_publish_to_single_topic_with_startup_and_shutdown_instructions.txt  multiple_consume_and_multiple_subscribe.txt  multiple_produces_with_partition_key_and_auth.txt  publish_messages_from_multiple_sources.txt
mkdocs/: mkdocs.yml  summary_template.txt
nbs/: App_And_Test_Generator.ipynb  App_Description_Validator.ipynb  App_Generator.ipynb  App_Skeleton_Generator.ipynb  AsyncAPI_Spec_Generator.ipynb  Benchmark_CLI.ipynb  CLI.ipynb  Chat.ipynb  Code_Generator.ipynb  Code_Generator_Helper.ipynb  Constants.ipynb  Coversation_Workflow.ipynb  CustomAIChat.ipynb  Embeddings.ipynb  Embeddings_CLI.ipynb  Execution_Team.ipynb  First_Layer_Workflow.ipynb  Helper.ipynb  Integration_Test_Generator.ipynb  Integration_User_Po_and_Planning_Team.ipynb  Logger.ipynb  New_Project_Generator.ipynb  PackageData.ipynb  Plan_Generator.ipynb  Planning_Team.ipynb  Playground.ipynb  Prompts.ipynb  Tehnical_Design_Document.ipynb  Test_Generator.ipynb  Untitled.ipynb  Untitled1.ipynb  User_PO_Conversation.ipynb  _AsyncAPI_Spec_Generator.ipynb  index.ipynb  nbdev.yml  sidebar.yml
sample-files/: _old-plan.json  _old_asyncapi.yml  app_description.txt  application.py  test.py
scripts/: generate_embeddings.py  run_benchmark.py  run_benchmark.sh
search/: search_index.json
(+72 files in other folders)
